# FastapiCourse

./: .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml
Modules/currency_exchange_project/: converter.py  routers.py  schemas.py
Modules/currency_exchange_project_one/: converter.py  main.py  routers.py
Modules/introduction/: async_await_sponge_bob.py  async_overview.py  pydantic_overview.py
app/: main.py
